<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:fitsSystemWindows="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="240dp">
            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"/>

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/bg_circle_white"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/bt_back"
                android:layout_gravity="top|start"
                android:elevation="8dp"/>

            <ImageButton
                android:id="@+id/btnBookmark"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/bg_circle_white"
                android:src="@drawable/ic_favorites_nav"
                android:layout_gravity="top|end"
                android:elevation="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom|start"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/bg_glass"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp">
                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/ic_star"/>
                    <TextView
                        android:id="@+id/tvRate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_white"
                        android:textSize="12sp"
                        android:layout_marginStart="4dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:gravity="center_vertical"
                    android:background="@drawable/bg_glass"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:textColor="@color/text_white"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_white"
                    android:textSize="22sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="16dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:cardCornerRadius="90dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/img_account" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Автор"
                        android:textColor="@color/text_gray"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Merion Academy"
                        android:textColor="@color/text_white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/bt_go_lesson"
                android:textAllCaps="false"
                android:textColor="@color/text_white"
                android:textSize="14sp"
                android:background="@drawable/bg_button_green"
                android:layout_marginTop="36dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/bt_go_platform"
                android:textAllCaps="false"
                android:textColor="@color/text_white"
                android:textSize="14sp"
                android:background="@drawable/bg_button_dark"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textColor="@color/text_white"
                android:textSize="22sp"
                android:layout_marginTop="36dp" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                android:textSize="14sp"
                android:lineSpacingMultiplier="1.5"
                android:layout_marginTop="12dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>